syntax = "proto3";

package project.planton.provider.kubernetes.addon.externaldnskubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/addon/externaldnskubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/addon/externaldnskubernetes/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

//external-dns-kubernetes
message ExternalDnsKubernetes {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'ExternalDnsKubernetes'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  ExternalDnsKubernetesSpec spec = 4 [(buf.validate.field).required = true];

  //status
  ExternalDnsKubernetesStatus status = 5;
}

//external-dns-kubernetes status.
message ExternalDnsKubernetesStatus {
  //stack-outputs
  ExternalDnsKubernetesStackOutputs outputs = 1;
}
