syntax = "proto3";

package project.planton.provider.kubernetes.addon.externaldnskubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/foreignkey/v1/foreign_key.proto";
import "project/planton/shared/kubernetes/target_cluster.proto";
import "project/planton/shared/options/options.proto";

// ExternalDnsKubernetesSpec defines configuration for ExternalDNS on any cluster.
message ExternalDnsKubernetesSpec {
  // The Kubernetes cluster to install this addon on.
  project.planton.shared.kubernetes.KubernetesAddonTargetCluster target_cluster = 1;
  // Kubernetes namespace where ExternalDNS will be deployed.
  string namespace = 2 [(project.planton.shared.options.default) = "external-dns"];
  // ExternalDNS version such as "v0.19.0". Used to set the image tag.
  string external_dns_version = 3 [(project.planton.shared.options.default) = "v0.19.0"];
  // Helm chart version to deploy. If not specified, uses the default version.
  string helm_chart_version = 4 [(project.planton.shared.options.default) = "1.19.0"];
  //provider-specific glue. Only one may be set.
  oneof provider_config {
    ExternalDnsGkeConfig gke = 200;
    ExternalDnsEksConfig eks = 201;
    ExternalDnsAksConfig aks = 202;
    ExternalDnsCloudflareConfig cloudflare = 203;
  }
}

// ExternalDnsGkeConfig defines configuration for ExternalDNS on GKE with Google Cloud DNS.
message ExternalDnsGkeConfig {
  // The GCP project that hosts the DNS zone and the GKE cluster.
  project.planton.shared.foreignkey.v1.StringValueOrRef project_id = 1 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = GcpProject,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.project_id"
  ];
  // The GCP DNS zone ID to use for ExternalDNS.
  project.planton.shared.foreignkey.v1.StringValueOrRef dns_zone_id = 2 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = GcpDnsZone,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
}

// ExternalDnsEksConfig defines configuration for ExternalDNS on EKS with AWS Route53 .
message ExternalDnsEksConfig {
  project.planton.shared.foreignkey.v1.StringValueOrRef route53_zone_id = 1 [
    (buf.validate.field).required = true,
    (project.planton.shared.foreignkey.v1.default_kind) = AwsRoute53Zone,
    (project.planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_id"
  ];
  // Optional existing IAM role ARN for IRSA; auto-created if blank.
  string irsa_role_arn_override = 2;
}

// ExternalDnsAksConfig defines configuration for ExternalDNS on AKS with Azure DNS.
message ExternalDnsAksConfig {
  // The Azure DNS zone ID to use for ExternalDNS.
  string dns_zone_id = 1;
  // The Azure Managed Identity client ID to use for ExternalDNS.
  string managed_identity_client_id = 2;
}

// ExternalDnsCloudflareConfig defines configuration for ExternalDNS with Cloudflare DNS.
message ExternalDnsCloudflareConfig {
  // Cloudflare API token for authentication (scoped with Zone:Zone:Read and Zone:DNS:Edit permissions).
  string api_token = 1 [(buf.validate.field).required = true];

  // Cloudflare DNS zone ID to manage. ExternalDNS will only manage records in this zone.
  string dns_zone_id = 2 [(buf.validate.field).required = true];

  // Enable Cloudflare proxy (orange cloud) for all managed DNS records.
  // When enabled, traffic routes through Cloudflare's edge network for DDoS protection, WAF, and CDN.
  // Default: false
  bool is_proxied = 3;
}
